--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,17 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title} modified by Emani Aasrita
+  P Lab 10
+  button(type="button", onclick="doReduce()" class="btn btn-warning") press me
+  #reduce Reduce the value
+  script.
+    var count = 20
+    var change = -1
+    function doReduce(){
+      console.log("Camer here")
+      count = count + change
+      change = change -1
+      let resultdiv = document.getElementById('reduce')
+      resultdiv.innerHTML=`Count ${count} with bump ${change}`
+    }
