script done for bonus

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,3 +16,8 @@ block content
       let resultdiv = document.getElementById('reduce')
       resultdiv.innerHTML=`Count ${count} with bump ${change}`
     }
+  a(href="/selector") selector 
+  br
+  a(href="/board") board
+  br
+  a(href="/icecream") icecream Search results 
