--- a/views/icecream.pug
+++ b/views/icecream.pug
@@ -40,5 +40,5 @@ block content
             br
   script.
     function buy(index){
-      alert("You purchased item "+index)
+      alert("You purchased item "+(index+1))
     }
